# pyvax-rebrand

./: .gitignore  CLI_README.md  README.PRODUCTION.md  README.md  SECURITY.md  classified.toml  codebase_analysis.md  demo.sh  deploy.sh  middleware.ts  mut.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  railway.toml  runs.json  seed.mjs  setup.py  tailwind.config.ts  test_compile.json  test_compile2.json  test_compile_counter.json  test_output.txt  test_output2.txt  test_output3.txt  test_output_full.txt  test_transpiler.py  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: publish.yml  security.yml
DemoToken/scripts/: deploy.py
TestToken/contracts/: ERC20.py
api/: cli.py  transpiler.py
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/admin/agents/: page.tsx
app/admin/agents/[agentId]/: page.tsx
app/agent/: page.tsx
app/api/admin/agents/: route.ts
app/api/admin/agents/[agentId]/: route.ts
app/api/admin/agents/bulk/: route.ts
app/api/agents/apply/: route.ts
app/api/agents/webhook-proxy/: route.ts
app/api/careers/apply/: route.ts
app/api/classified/validate/: route.ts
app/api/pyvax/: route.ts
app/api/transform/: route.ts
app/api/verify/: route.ts
app/api/waitlist/: route.ts
app/careers/: page.tsx
app/careers/test/[agentId]/: page.tsx
app/classified/: page.tsx
app/docs/: layout.tsx  page.tsx
app/docs/[...slug]/: not-found.tsx  page.tsx
app/games/: page.tsx
app/mission/[agentId]/: page.tsx
app/playground/: page.tsx
app/pricing/: page.tsx
avax_cli/: __init__.py  __main__.py  api_wrapper.py  cli.py  compiler.py  deployer.py  interactor.py  py_contracts.py  shortcuts.py  snowtrace.py  templates.py  transformer.py  transpiler.py  utils.py  wallet.py
classified-agent-pkg/: LICENSE  MANIFEST.in  README.md  pyproject.toml  upload_log.txt
classified-agent-pkg/classified_agent/: __init__.py
classified-agent-pkg/classified_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
classified-agent-pkg/classified_agent/adapters/: synthesis.py  synthesis_client.py
classified-agent-pkg/classified_agent/cli/: main.py  submit_flow.py
classified-agent-pkg/classified_agent/core/: context.py  llm.py  memory.py
classified-agent-pkg/classified_agent/examples/: classified_local.toml  classified_synthesis.toml
classified-agent-pkg/classified_agent/logging/: __init__.py  logger.py
classified-agent-pkg/classified_agent/templates/: .env.example  README.md  agent.yaml  classified.toml
classified-agent-pkg/classified_agent/templates/examples/: memory.md  mission.md  quickstart.py
classified-agent-pkg/classified_agent/templates/prompts/: system.md  tool-use.md
classified-agent-pkg/classified_agent/templates/skills/: PROJECT_CLASSIFIED_SKILL.md  README.md
classified-agent-pkg/classified_agent/tests/: test_cli_scaffold.py  test_templates.py  test_wallet_policy.py
classified-agent-pkg/classified_agent/tools/: base.py  dual_compiler.py  git_tools.py  solidity_fallback.py  web3_tools.py
classified-agent-pkg/classified_agent/wallet/: __init__.py  base.py
classified_agent/: README.md
classified_agent/adapters/: __init__.py
classified_agent/cli/: __init__.py
classified_agent/config/: __init__.py  loader.py  models.py
classified_agent/core/: loop.py
classified_agent/tests/: __init__.py  conftest.py  test_config.py  test_loop.py  test_tools.py
classified_agent/tools/: fs_tools.py  http_tools.py  web3_tools.py
classified_agent/wallet/: managed_wallets.py  pyvax_wallet.py
components/: ScrollImageSequence.tsx  contract-interaction.tsx  docs-client.tsx  footer.tsx  header.tsx  mdx-components.tsx  navbar.tsx  section.tsx  wallet-button.tsx  wallet-provider.tsx
components/admin/: AgentTable.tsx  BulkActionBar.tsx  StatsCards.tsx  StatusBadge.tsx
components/classified/: AccessGate.tsx  FooterCTA.tsx  Hero.tsx  LoadingScreen.tsx  ParticleBg.tsx  Prizes.tsx  SponsorsMarquee.tsx  Steps.tsx  TerminalDemo.tsx  TractionBar.tsx  WhyPyVax.tsx
content/docs/: api.mdx  cli.mdx  contracts.mdx  deployment.mdx  first-contract.mdx  install.mdx  playground.mdx  quickstart.mdx
content/docs/advanced/: debugging.mdx  gas.mdx  rpc.mdx  testing.mdx
content/docs/agents/: execution.mdx  memory.mdx  systems.mdx  wallets.mdx
content/docs/classified/: access-codes.mdx  overview.mdx
content/docs/games/: assets.mdx  economies.mdx  leaderboards.mdx  loot.mdx
docker/: Dockerfile
docs/: VERIFICATION.md
lib/admin/: agents.ts
lib/emails/: careers.ts
lib/missions/: submit.ts
logs/: 20260314_225330_31943430.jsonl  20260315_113304_af45ffa1.jsonl  20260315_113704_5470b0ad.jsonl  20260315_114024_ae0c0766.jsonl  20260315_114137_96a15102.jsonl  20260315_114323_20f314ef.jsonl  20260315_114326_75dbbef1.jsonl  20260315_114328_9371e7f8.jsonl
playground/: alias.txt  list.txt  requirements.txt  serve_local.py  vercel.json
playground/api/: __init__.py  cli.py  index.py  verify.py
playground/public/: index.html
public/: 3d-robo.glb  agent.yaml  scene.splinecode
pyvax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
railway-backend/: Dockerfile  main.py  railway.toml  requirements.txt
railway-backend/api/: transpiler.py
railway-backend/api/avax_cli/: api_wrapper.py  cli.py  interactor.py
test_AgentVault/: .env.example  .gitignore  pyvax_config.json
test_AgentVault/contracts/: AgentVault.py
test_AgentVault/scripts/: deploy.py
test_Counter/contracts/: Counter.py
test_Counter/scripts/: deploy.py
test_ERC20/contracts/: ERC20.py
test_ERC20/scripts/: deploy.py
test_SimpleStorage/contracts/: SimpleStorage.py
test_SimpleStorage/scripts/: deploy.py
test_Voting/contracts/: Voting.py
test_Voting/scripts/: deploy.py
tests/: test_agent_security.py  test_keccak_collisions.py  test_output.txt  test_pipeline.py  test_quick.py  test_sload_diag.py  test_transformer.py  test_transpiler_sandbox.py  test_v3_optimizations.py  test_verification_pipeline.py  test_wallet_security.py
workspace/: NOTES.md
(+10 files in other folders)
