[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvax-cli"
version = "1.2.0"
description = "PyVax — Python to EVM transpiler and Project Classified Web3 AI Agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PyVax Team", email = "team@pyvax.io"},
]
keywords = ["avalanche", "evm", "blockchain", "smart-contracts", "python", "transpiler", "web3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "web3>=6.0.0",
    "pycryptodome>=3.15.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "eth-account>=0.10.0",
    "requests>=2.28.0",
    # ── Project Classified deps ──
    "pydantic>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    # Security scanning
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
verify = [
    "py-solc-x>=2.0.0",
]

[project.scripts]
pyvax = "avax_cli.cli:main"
classified-agent = "classified_agent.cli.main:main"

[project.urls]
Homepage = "https://pyvax.io"
Repository = "https://github.com/ShahiTechnovation/pyvax-rebrand"
Documentation = "https://docs.pyvax.io"
Issues = "https://github.com/ShahiTechnovation/pyvax-rebrand/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
